--- a/tests/index.html
+++ b/tests/index.html
@@ -3,13 +3,50 @@
 <head>
   <meta charset="UTF-8">
   <title>Test ES5</title>
-  <script src="../lib/letters.js"></script>
+  <script src="../lib/letters.min.js"></script>
+  <style>
+    html, body {
+      width: 100%;
+      height: 100%;
+    }
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+    }
+
+    .word-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 50px;
+      margin: 0px 5px;
+      cursor: pointer;
+    }
+
+    .word-container span {
+      display: inline-block;
+      letter-spacing: 5px;
+      height: 40px;
+      width: 20px;
+      text-align: center;
+      font-size: 2em;
+    }
+
+    .word-container span.letter-hidden {
+      display: none;
+    }
+
+  </style>
 </head>
 <body>
 
 </body>
 <script>
-  var letters = new Letters(document.body, ["Letters", "Test"]);
+
+  var letters = new Letters(document.body, ["LETTERS", "DOT", "JS"]);
   letters.init();
+
 </script>
 </html>
