add commonjs bundle

--- a/tests/index.html
+++ b/tests/index.html
@@ -45,7 +45,7 @@
 </body>
 <script>
 
-  var letters = new Letters(document.body, ["LETTERS", "DOT", "JS"]);
+  var letters = new Letters(["LETTERS", "DOT", "JS"]);
   letters.init();
 
 </script>
